# groovebox

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: events.rs  mod.rs  state.rs
src/audio/: fft.rs  mod.rs  mpv.rs  types.rs
src/models/: category.rs  history.rs  mod.rs  playlist.rs  track.rs
src/storage/: categories.rs  database.rs  history.rs  mod.rs  playlists.rs  settings.rs  tracks.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/components/: content_panel.rs  eq_selector.rs  equalizer.rs  help_bar.rs  loading_bar.rs  mod.rs  nav_panel.rs  now_playing.rs  popup.rs  progress_bar.rs  queue_panel.rs  search_input.rs  theme_selector.rs  top_bar.rs
src/youtube/: chapters.rs  metadata.rs  mod.rs  search.rs  thumbnail.rs  types.rs
