[package]
name = "groovebox"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = "4"
image = "0.25"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
cpal = "0.15"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
