[package]
name = "groovebox"
version = "1.2.0"
edition = "2021"
description = "A terminal-based YouTube audio player"
license = "MIT"
repository = "https://github.com/babinc/groovebox"
readme = "README.md"
keywords = ["music", "youtube", "terminal", "tui", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = "4"
image = "0.25"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
cpal = { git = "https://github.com/RustAudio/cpal.git", rev = "2da4ee1", features = ["pipewire"] }
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
